# XAI_CreditRisk

./: README.md  pyproject.toml
Data/: synth_data.ipynb  synth_dataset.csv
EDA/: kaggle_dataset.ipynb
Models/: xgb.ipynb
