[project]
name = "mugrf-thesis"
version = "1.0"
description = "Packacges needed for running the poyect's code"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "none"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
