[project]
name = "mugrf-thesis"
version = "1.0"
description = "Packacges needed for running the poyect's code"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "none"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (==1.26)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "shap (>=0.47.2,<0.48.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
